// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test File ProductBox ProductBox with 3 column 1`] = `
<div
  className="Product__ProductItem-s1fzb5ed-0 kAOMey"
>
  <picture
    className="SquareBox__BoxSquare-buzb9n-0 csFNBJ"
  >
    <div
      className="SquareBox__BoxSquareInner-buzb9n-1 ebtWZu"
    />
  </picture>
  <div
    className="Product__ProductTitle-s1fzb5ed-1 cuXePX"
  >
    Gabinete Slim DT-100BK C/Fonte PS-200 FX C3TECH S/Cabo
  </div>
  <div
    className="Product__ProductPrice-s1fzb5ed-2 bRkSso"
  >
    <span
      className="Product__ProductCurrency-s1fzb5ed-3 gRgDZn"
    >
      R$
    </span>
    <span
      className="Product__ProductAmount-s1fzb5ed-4 UhmjH"
    >
      284,00
    </span>
  </div>
  <div
    className="Product__Status-s1fzb5ed-8 ijDCaF"
  >
    Entrega Imediata
  </div>
  <div
    className="Product__ProductButtons-s1fzb5ed-5 jeLvUD"
  >
    <a
      className="Product__ProductBtnDetails-s1fzb5ed-6 gRlUCS"
      href="/product/gabinete-slim-dt-100bk-c-fonte-ps-200-fx-c3tech"
      onClick={[Function]}
    >
      Ver Detalhes
    </a>
  </div>
</div>
`;

exports[`Test File ProductBox ProductBox with 4 column 1`] = `
<div
  className="Product__ProductItem-s1fzb5ed-0 gkCshv"
>
  <picture
    className="SquareBox__BoxSquare-buzb9n-0 csFNBJ"
  >
    <div
      className="SquareBox__BoxSquareInner-buzb9n-1 ebtWZu"
    />
  </picture>
  <div
    className="Product__ProductTitle-s1fzb5ed-1 cuXePX"
  >
    Gabinete Slim DT-100BK C/Fonte PS-200 FX C3TECH S/Cabo
  </div>
  <div
    className="Product__ProductPrice-s1fzb5ed-2 bRkSso"
  >
    <span
      className="Product__ProductCurrency-s1fzb5ed-3 gRgDZn"
    >
      R$
    </span>
    <span
      className="Product__ProductAmount-s1fzb5ed-4 UhmjH"
    >
      284,00
    </span>
  </div>
  <div
    className="Product__Status-s1fzb5ed-8 ijDCaF"
  >
    Entrega Imediata
  </div>
  <div
    className="Product__ProductButtons-s1fzb5ed-5 jeLvUD"
  >
    <a
      className="Product__ProductBtnDetails-s1fzb5ed-6 gRlUCS"
      href="/product/gabinete-slim-dt-100bk-c-fonte-ps-200-fx-c3tech"
      onClick={[Function]}
    >
      Ver Detalhes
    </a>
  </div>
</div>
`;
